# rustdoc-stripper

./: .gitignore  .travis.yml  Cargo.toml  README.md  rust-toolchain
.github/workflows/: main.yaml
src/: consts.rs  lib.rs  main.rs  regenerate.rs  strip.rs  types.rs  utils.rs
src/cargo-doc-stripper/: main.rs
stripper_lib/: Cargo.toml
tests/: basic.rs  basic10.rs  basic11.rs  basic12.rs  basic13.rs  basic14.rs  basic15.rs  basic16.rs  basic17.rs  basic18.rs  basic2.rs  basic3.rs  basic4.rs  basic5.rs  basic6.rs  basic7.rs  basic8.rs  basic9.rs  item_inside_macro.rs  tests.rs
tests/common/: mod.rs
