[package]
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
name = "rustdoc-stripper"
version = "0.1.10"

description = "A tool to manipulate rustdoc comments"
repository = "https://github.com/GuillaumeGomez/rustdoc-stripper"
homepage = "https://github.com/GuillaumeGomez/rustdoc-stripper"
documentation = "https://github.com/GuillaumeGomez/rustdoc-stripper"
license = "Apache-2.0"

readme = "README.md"

keywords = ["rustdoc", "doc", "strip", "tool"]

[[bin]]
name = "rustdoc-stripper"

[dev-dependencies]
tempfile = "3.0.5"

[lib]
name = "stripper_lib"
